# fastapi-template

./: .pre-commit-config.yaml  Dockerfile  FUNDING.yml  README.md  pyproject.toml
.github/workflows/: build.yaml
app/: main.py  settings.py
app/database/: db.py
app/migrations/: env.py  script.py.mako
app/routers/: api.py
app/schemas/: hello.py
