[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI production template"
authors = ["kartaris <rh@getflow.tech>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.128.0"
sqlmodel = "^0.0.31"
asyncpg = "^0.31.0"
psycopg2 = "^2.9.11"
httpx = "^0.28.1"
alembic = "^1.17.2"
sentry-sdk = {extras = ["fastapi"], version = "^2.48.0"}
gunicorn = "^23.0.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
prometheus-fastapi-instrumentator = "^7.1.0"
pyctuator = "^1.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
